cmake_minimum_required(VERSION 3.0)
project(data_structures_and_algorithms_)

set(CMAKE_CXX_STANDARD 20)

add_executable(bubble_sort sort/bubble_sort.cpp)
add_executable(linear_search search/linear_search.cpp)
add_executable(insertion_sort sort/insertion_sort.cpp)
add_executable(quick_sort sort/quick_sort.cpp)
add_executable(01_native parttern_search/01_native.cpp)
add_executable(02_regex parttern_search/02_regex.cpp)
add_executable(binary_search search/binary_search.cpp)
add_executable(my_array containers/my_array.cpp)
add_executable(my_vector containers/my_vector.cpp)
add_executable(single_linked linked_list/single_linked.cpp)
add_executable(btree tree/btree.cpp)
add_executable(merge_sort sort/merge_sort.cpp)