cmake_minimum_required(VERSION 3.0)
project(data_structures_and_algorithms_)

set(CMAKE_CXX_STANDARD 20)

add_executable(bubble_sort sort/bubble_sort.cpp)
add_executable(linear_search search/linear_search.cpp)
add_executable(insertion_sort sort/insertion_sort.cpp)
add_executable(quick_sort sort/quick_sort.cpp)
add_executable(01_native parttern_search/01_native.cpp)
add_executable(02_regex parttern_search/02_regex.cpp)
add_executable(binary_search search/binary_search.cpp)
add_executable(single_linked linked_list/single_linked.cpp)
add_executable(c_single_linked linked_list/c_single_linked.c)

add_executable(btree tree/btree.cpp)
add_executable(merge_sort sort/merge_sort.cpp)
add_executable(01 array/01.cpp)
add_executable(c_doubly_linked linked_list/c_doubly_linked.c)
add_executable(circular_linked linked_list/circular_linked.cpp)
add_executable(c_stack stack/c_stack.c)
add_executable(c_simple_queue queue/c_simple_queue.c)
add_executable(imple_via_stack queue/imple_via_stack.cpp)
add_executable(c_btree tree/c_btree.c)
add_executable(btree_traversal tree/btree_traversal.cpp)

add_executable(adjacency_matrix graph/adjacency_matrix.cpp)
add_executable(adjacency_list graph/adjacency_list.cpp)